[package]
name = "octree-sim-3d"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["bevy_dev_tools", "dynamic_linking"] }
kdtrees = { git = "https://github.com/edddddee/kdtrees.git", version = "0.1.0" }
itertools = "0.14.0"
rand = "0.9.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
